--- a/panel.html
+++ b/panel.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./app/dist/assets/svelte.a39f39b7.svg" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Svelte</title>
-    <script type="module" crossorigin src="./app/dist/assets/index.2d08a611.js"></script>
-    <link rel="stylesheet" href="./app/dist/assets/index.3635012e.css">
+    <script type="module" crossorigin src="/assets/index.2d08a611.js"></script>
+    <link rel="stylesheet" href="/assets/index.3635012e.css">
   </head>
   <body>
     <div id="app"></div>
+    
   </body>
 </html>
