--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,6 @@
 <body>
   <!--This is the node that svelte is going to take to make the magic-->
   <div id="root"></div>
+  <script src="./resources.js"></script>
 </body>
 </html>
