--- a/public/panel.html
+++ b/public/panel.html
@@ -9,7 +9,7 @@
     <!-- <link rel="stylesheet" href="./app/dist/assets/index.3635012e.css"> -->
   </head>
   <body>
-    <!-- <div id="app"></div> -->
+    <div id="root"></div>
     <script src="./resources.js"></script>
   </body>
 </html>
