--- a/public/panel.html
+++ b/public/panel.html
@@ -9,7 +9,6 @@
     <!-- <link rel="stylesheet" href="./app/dist/assets/index.3635012e.css"> -->
   </head>
   <body>
-    <div id="root"></div>
-    <script src="./resources.js"></script>
+    <div id="app"></div>
   </body>
 </html>
